# rust_experiments

./: README.md
convergence_rusqlite/src/: main.rs
datafusion_udf_wasm/: Cargo.toml
datafusion_udf_wasm/src/: lib.rs  main.rs
hello-parquet/: Cargo.toml  column_sample.parquet
hello-parquet/src/: main.rs
myrockdb-rust/: Cargo.toml  README.md
myrockdb-rust/src/: handler.rs  main.rs
own-sql-client/: Cargo.toml
own-sql-client/examples/: cube_mysql.rs
test-str/: Cargo.toml
test-str/src/: main.rs
wasmtime_hello/src/: main.rs
