[package]
name = "data_fusion_udf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


datafusion = "18.0.0"
datafusion-common = "18.0.0"
datafusion-expr = "18.0.0"
tokio = "1.0"
wasmtime = "1.0.1"
wasmtime-wasi = "1.0.1"
wasi-common = "1.0.1"
arrow = "32.0.0"
arrow-buffer = "32.0.0"
serde = "1.0.138"
strum_macros = ">=0.24"
rmp = "0.8.11"
rmp-serde = "1.1.1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
strum = ">=0.24"
serde_json = "1"
hex = ">=0.4.0"


[dev-dependencies]
assert_unordered = "0.3"
datafusion-common = "18.0.0"
mockall = "0.11.1"
rstest = "*"
wiremock = "0.5"
