[package]
name = "own-sql-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
mysql_common = { version = "0.28.0", features = ["chrono"] }
chrono = "0.4"

[dev-dependencies]
mysql = "22"
mysql_async = "0.29.0"
slab = "0.4.2"
tokio = { version = "1.15.0", features = ["full"] }
